<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ccccff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fcf6e6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"
        >

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainTitle"
            android:textAlignment="center"
            android:textSize="35sp"
            android:paddingTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/subtitleText"
            />
        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textAlignment="center"
            android:textSize="17sp"
            android:paddingTop="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/subtitleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#0BCE83"
            android:onClick="onLoginClick"/>

        <Button
            android:id="@+id/signupDonorBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupDonor"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#fcf6e6"
            android:textColor="#9586A8"
            android:onClick="onSignupDonorClick"/>

        <Button
            android:id="@+id/signupHospitalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupBB"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/signupDonorBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#fcf6e6"
            android:textColor="#9586A8"
            android:onClick="onSignupBBClick"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>